--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,3 +4,12 @@
 //     "types": ["NetscriptDefinitions.d.ts"]
 //   }
 // }
+{
+  "compilerOptions": {
+      "target": "ESNext",
+  },
+  "exclude": [
+      "node_modules",
+      "**/node_modules/*"
+  ]
+}
